CHANGES
=======
0.7.3
=====
- orm
   - Added after_soft_rollback() Session event.  This
     event fires unconditionally whenever rollback()
     is called, regardless of if an actual DBAPI
     level rollback occurred.  This event
     is specifically designed to allow operations
     with the Session to proceed after a rollback
     when the Session.is_active is True.
     [ticket:2241]

  - Fixed bug in query.join() which would occur
    in a complex multiple-overlapping path scenario,
    where the same table could be joined to
    twice.  Thanks *much* to Dave Vitek 
    for the excellent fix here.  [ticket:2247]

  - Query will convert an OFFSET of zero when
    slicing into None, so that needless OFFSET
    clauses are not invoked.

  - Repaired edge case where mapper would fail
    to fully update internal state when a relationship
    on a new mapper would establish a backref on the
    first mapper.

- sqlite
  - Ensured that the same ValueError is raised for
    illegal date/time/datetime string parsed from
    the database regardless of whether C 
    extensions are in use or not.

- postgresql
  - Use an atomic counter as the "random number" 
    source for server side cursor names; 
    conflicts have been reported in rare cases.

  - Narrowed the assumption made when reflecting
    a foreign-key referenced table with schema in
    the current search path; an explicit schema will
    be applied to the referenced table only if 
    it actually matches that of the referencing table,
    which also has an explicit schema.   Previously
    it was assumed that "current" schema was synonymous
    with the full search_path.  [ticket:2249]

- mssql
  - "0" is accepted as an argument for limit() which
    will produce "TOP 0". [ticket:2222]

- ext
  - Added local_attr, remote_attr, attr accessors
    to AssociationProxy, providing quick access
    to the proxied attributes at the class
    level. [ticket:2236]

0.7.2
=====
- orm